Fixed Toucan overlapping the line on the login page
Someone added some padding the image in the css file for the login page, which when working with smaller windows would cause the toucan to overlap. Taking out this padding fixes this issue.

--- a/cs97project/src/styles/LoginPage.css
+++ b/cs97project/src/styles/LoginPage.css
@@ -53,7 +53,6 @@ html,body {
 .Logo {
     grid-row: 1;
     grid-column: 1;
-    padding-left: 35%;
     /* background-image: url(../images/tucanOnEgg.png); */
     /* position: relative;
     padding-top: 50%;
